# custom--nerk

./: .gitattributes  Procfile  README.md  app.py  pyproject.toml  requirements.txt
model-best/: config.cfg  meta.json
model-best/ner/: model  moves
model-best/tok2vec/: model
